--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -153,7 +153,8 @@ body{
 }
 
 .projetos .projeto h3{
-    background-color: black;
+    background-color: gray;
+    color: black;
     width: 100%;
     padding-left: 20px;
     padding-bottom: 10px;
@@ -175,7 +176,7 @@ body{
 }
 
 .projetos .container-projetos .projeto:hover .informacoes-projeto{
-    opacity: 0.7;
+    opacity: 0.9;
     background-color: #000;
 }
 
